# remy-fl

./: .gitignore  CHANGELOG_BRAIN.md  CMakeLists.txt  DEVLOG.md  GAMEPLAN.md  README.md  README_BRAIN.md  config.toml  install-mac.sh  pytest.ini  requirements-brain.txt
app/: analysis.py  cli.py  context.py  converter.py  critic.py  db.py  feedback.py  finalizer.py  generator.py  guides.py  learning.py  llm_client.py  memory.py  music_validator.py  perception.py  pipeline.py  planner.py  prompt_loader.py  schema.py  session.py  simulate_week.py
app/api/: __init__.py  endpoints.py  server.py
app/migrations/: 001_cognitive_memory.sql
brain/: README.md
brain/1-knowledge/: README.md  fingerprints.json  genre_cards.json  house_brain_corpus.json  mood_table.json  sound_types.json
brain/2-prompts/: README.md  master-system-prompt.md
brain/3-memory/: README.md  brain_report.md  style_library.db
branding/composerai/: ComposerAI Logo.dc.html  ComposerAI.icns
fl-midi-agent/: README.md  pyproject.toml
fl-midi-agent/docs/screenshots/: README.md
fl-midi-agent/flscript/: MIDI Agent.pyscript  __init__.py  midi_agent_core.py
fl-midi-agent/relay/: __init__.py  app.py  backend.py  bridge.py  cli.py  companion.py  config.py  installer.py  logging_setup.py  models.py
fl-midi-agent/relay/static/: index.html
fl-midi-agent/relay/static/assets/: index-B_tJ_UaI.css  index-Bbb4anR2.js  index-CecKjYQw.js  index-DDGvIf9P.js  index-O1JkvzmR.css  index-bLBigXw0.css
fl-midi-agent/tests/: conftest.py  test_flscript.py  test_installer.py  test_relay.py
prompts/: house-midi-agent-master-prompt.md
samples/api/: deep_house_chords_in_f_minor__2_bars.mid
samples/studio-session/: piano_house_progressive_melodic_house__c.mid  progressive_melodic_house__chords__8_bar.mid
seeds/: fingerprints.json
src/: HumCaptureCallback.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
src/ai/: AIClient.cpp  AIClient.h  BrainCorpus.cpp  BrainCorpus.h  BrainValidator.cpp  BrainValidator.h  KnowledgeBase.cpp  KnowledgeBase.h  MidiPattern.cpp  MidiPattern.h
src/engine/: ChatDirector.h  ChordAnalysis.cpp  ChordAnalysis.h  Critic.h  GenerationReport.h  HumToChords.h  MidiDna.cpp  MidiDna.h  MidiGenerator.cpp  MidiGenerator.h  MidiLibrary.cpp  MidiLibrary.h  MusicInstructions.h  MusicTheory.h  PitchDetector.h  PreviewSounds.cpp  PreviewSounds.h  PreviewSynth.cpp  PreviewSynth.h  SampleLibrary.cpp  SampleLibrary.h  SongPlan.h  StylePresets.h
src/gui/: ChatPanel.cpp  ChatPanel.h  ChordDashboardView.cpp  ChordDashboardView.h  CustomLookAndFeel.h  DrumKitPanel.cpp  DrumKitPanel.h  FileDragButton.h  (+8 more)
tests/: BrainCorpusTests.cpp  EngineTests.cpp  GeneratorAuditTests.cpp  MidiPatternTests.cpp  test_analysis.py  test_brain_pipeline.py  test_cognitive_brain.py  test_collaboration.py  test_guides.py  test_live_cognitive_brain.py  test_sound_types.py
tools/: ingest_house_brain_pdf.py
ui/: README.md  index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
(+48 files in other folders)
